# SmartHome

./: .gitignore  README.md  SYSTEM_FLOW.md  served.html
APP/smarthome_app/: pubspec.yaml
APP/smarthome_app/ios/Runner/: Info.plist
APP/smarthome_app/ios/Runner.xcodeproj/: project.pbxproj
APP/smarthome_app/lib/: dashboard_screen.dart  main.dart  mqtt_app_state.dart
APP/smarthome_app/web/: app.js  index.html  style.css
ESP32/esp32s3/: CMakeLists.txt
ESP32/esp32s3/main/: CMakeLists.txt  app_config.h  idf_component.yml  main.c  mqtt_manager.c  mqtt_manager.h  sensor_types.h  system_state.h  uart_handler.c  uart_handler.h  uart_protocol.c  uart_protocol.h  wifi_manager.c  wifi_manager.h
STM32/: README.md
STM32/SmartHome/: STM32F429I_DISCO_REV_D01.ioc
STM32/SmartHome/Core/Inc/: f4_uart_link.h  stm32f4xx_hal_conf.h
STM32/SmartHome/Core/Src/: f4_uart_link.c  freertos.c  gpio.c  ltdc.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32/SmartHome/STM32CubeIDE/: .cproject  .project  STM32F429I_DISCO_REV_D01.launch
STM32/SmartHome/TouchGFX/: SmartHome.touchgfx
STM32/SmartHome_STM32H7/: .cproject  .mxproject  .project  SmartHome_STM32H7 Debug.launch  SmartHome_STM32H7.ioc
STM32/SmartHome_STM32H7/Core/Inc/: auth_storage.h  buzzer.c  buzzer.h  dht11.h  keypad.h  light_sensor.h  main.h  pir_sensor.h  raindrop_sensor.h  relay.c  relay.h  rfid_rc522.h  (+14 more)
STM32/SmartHome_STM32H7/Debug/: SmartHome_STM32H7.list  makefile  objects.list
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/src/: index.ts
docs/: uart_protocol.md
(+81 files in other folders)
